...
    <!-- We 're setting the app_name through Olympus build.gradle to account for flavors,
         so we should not put it here. Let's keep it around in case we find a way to streamline it more
    <string name="app_name">Restcomm WebRTCDemo</string>
    -->
    <string name="contacts_activity_label">Restcomm Demo</string>

    <string name="action_audio_call">Make Audio Call</string>
    <string name="action_video_call">Make Video Call</string>

    <string name="messenger">Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_submit_bug_report">Bug report</string>
    <string name="title_activity_call">Call</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_message">Messages</string>
...
    <string name="title_activity_signin">Sign-in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_no_whitespace">This field should not contain spaces</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
